--- a/css/reveal.css
+++ b/css/reveal.css
@@ -33,6 +33,16 @@ body {
   background-color: #fff;
   color: #000; }
 
+::-moz-selection {
+  background: #FF5E99;
+  color: #fff;
+  text-shadow: none; }
+
+::selection {
+  background: #FF5E99;
+  color: #fff;
+  text-shadow: none; }
+
 /*********************************************
  * VIEW FRAGMENTS
  *********************************************/
