--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -18,7 +18,9 @@ body {
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
   font-size: 38px;
   font-weight: normal;
-  color: #fff; }
+  color: #fff;
+  width: auto;
+   }
 
 ::selection {
   color: #fff;
@@ -127,14 +129,16 @@ body {
 .reveal pre {
   display: block;
   position: relative;
-  width: 90%;
+  width: 100%;
   margin: 0px auto;
   text-align: left;
   font-size: 0.55em;
   font-family: monospace;
   line-height: 1.2em;
-  word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  word-wrap: break-word;}
+.reveal pre .center {
+  text-align: none;
+}
 
 .reveal code {
   font-family: monospace; }
